--- a/src/app/comun/mazmorra/mazmorra.component.sass
+++ b/src/app/comun/mazmorra/mazmorra.component.sass
@@ -175,25 +175,26 @@
     z-index: 6
 
 #panelControl
-  position: absolute
-  display: block
-  bottom: 4%
-  left: 40%
-  width: 50%
-  height: 20%
-  margin-left: -25%
-#atributoEnergia
-  position: absolute
-  width: 10%
-  height: 10%
-  bottom: 5%
-  right: 25%
+    position: absolute
+    display: block
+    bottom: 3%
+    left: 43%
+    width: 40%
+    height: 30%
+    margin-left: -20%
 
 #iconoConfiguracion
     position: absolute
     z-index: 5
     bottom: 5%
     left: 2%
+    height: 10%
+
+#iconoEstadisticas
+    position: absolute
+    z-index: 5
+    bottom: 5%
+    left: 10%
     height: 10%
 
 #iconoSocial
