--- a/src/styles.sass
+++ b/src/styles.sass
@@ -182,6 +182,11 @@ $colorSecundario: #ff8d40
   background-image: url("./assets/Efectos/37.png")
   -webkit-animation: shader 2s steps(39) infinite
 
+.shaderFuego
+  background-size: 4000% 100%
+  background-image: url("./assets/Efectos/35.png")
+  -webkit-animation: shader 2s steps(39) infinite
+
 @keyframes shader
   0%
     background-position: 0%
