--- a/src/app/comun/heroe/heroe.component.sass
+++ b/src/app/comun/heroe/heroe.component.sass
@@ -236,6 +236,14 @@
 $highlightTurnoColor: lightgray
 $highlightObjetivoColor: red
 
+.imagenAbatido
+  position: absolute !important
+  height: 50% !important
+  z-index: 1
+.shaderAbatido
+  left: -8% !important
+  filter: grayscale(1)
+
 .frameAnimacionesFrame
     position: absolute
     height: 120%
@@ -253,11 +261,6 @@ $highlightObjetivoColor: red
   background-color: gold
 
 
-@keyframes highlightTurno
-  0%
-    background: $highlightTurnoColor
-  100%
-    background: rgba(211, 211, 211, 0)
 
 .ObjetivoEnemigo
   border-color: red
@@ -318,6 +321,11 @@ $highlightObjetivoColor: red
   100%
     border-color: rgba(0, 255, 0, 0.2)
 
+@keyframes highlightTurno
+  0%
+    background: $highlightTurnoColor
+  100%
+    background: rgba(211, 211, 211, 0)
 
 // .animacionNumero
 //   position: absolute
