--- a/src/app/comun/interfaz/interfaz.component.sass
+++ b/src/app/comun/interfaz/interfaz.component.sass
@@ -212,6 +212,142 @@
             height: 100%
 
 //*************************************************
+//          Interfaz Detalle Enemigo / Heroe:
+//************************************************* -->
+
+#contenedorInterfazDetalle
+    position: absolute
+    background-color: $colorFondo2
+    color: $colorTexto
+    width: 50vw
+    height: 85vh
+    top: 50%
+    left: 50%
+    padding: 10px
+    transform: translate(-50%, -50%)
+
+    .titulo
+      position: relative
+      grid-area: 1 / 1 / 2 / 4
+      display: flex
+      justify-content: center
+      align-items: center
+
+    .contenedorPersonaje
+      position: absolute
+      width: 30% 
+      height: 65% 
+      display: flex
+      justify-content: center
+      .personaje
+        position: relative
+        height: 50%
+        max-height: 15vw
+        aspect-ratio: 1
+      
+    .contenedorAtributos
+      position: absolute 
+      right: 5%
+      height: 70%
+      width: 60%
+
+      .atributo
+        position: relative
+        display: flex
+        width: 100%
+        height: 15%
+        .icono
+          position: relative
+          display: inline-block
+          height: 100%
+          margin-right: 10px
+        .texto
+          position: relative
+          display: inline-block
+          
+
+    .contenedorBotones
+      position: absolute
+      display: flex
+      justify-content: space-around
+      align-items: center
+      height: 15%
+      bottom: 5%
+      width: 100%
+      .boton
+        position: relative
+        width: 40%
+        height: 100%
+
+//*************************************************
+//          Interfaz ESTADISTICAS:
+//************************************************* -->
+
+#contenedorInterfazEstadisticas
+    position: absolute
+    background-color: $colorFondo2
+    color: $colorTexto
+    width: 80vw
+    height: 90vh
+    top: 50%
+    left: 50%
+    padding: 10px
+    transform: translate(-50%, -50%)
+    
+    .divisor
+        position: relative
+        width: 100%
+        margin: 0 
+
+    .titulo
+      position: relative
+      grid-area: 1 / 1 / 2 / 4
+      display: flex
+      justify-content: center
+      align-items: center
+
+    .contenedorCabeceras
+      position: relative
+      width: 100%
+      display: flex
+      justify-content: space-around
+      .cabecera
+        width: 14%
+        text-align: center
+
+    .contenedorTabla
+      position: relative
+      width: 100%
+      height: 60%
+      display: flex
+      justify-content: space-around
+      flex-direction: column
+      .contenedorJugador
+        position: relative
+        width: 100%
+        display: flex
+        justify-content: space-around
+        flex-direction: row
+        .campo
+          width: 14%
+          text-align: center
+
+    .contenedorBotones
+      position: absolute
+      display: flex
+      justify-content: space-around
+      align-items: center
+      height: 10%
+      bottom: 5%
+      width: 70%
+      margin-left: -35%
+      left: 50%
+      .boton
+        position: relative
+        width: 40%
+        height: 100%
+
+//*************************************************
 //          Interfaz MOVIMIENTO:
 //************************************************* -->
 
@@ -377,6 +513,88 @@
     .contenedorBotones
       position: relative
       grid-area: 4 / 1 / 5 / 4
+      display: flex
+      justify-content: space-around
+      align-items: center
+      .boton
+        position: relative
+        width: 40%
+        height: 100%
+
+//*************************************************
+//          Interfaz Abatido:
+//************************************************* -->
+
+#contenedorInterfazAbatido
+    position: absolute
+    background-color: $colorFondo2
+    color: $colorTexto
+    width: 50vw
+    height: 70vh
+    top: 45%
+    left: 50%
+    padding: 10px
+    transform: translate(-50%, -50%)
+    display: grid
+    grid-template-columns: repeat(2, 1fr)
+    grid-template-rows: 0.2fr 1fr repeat(2, 0.3fr)
+    grid-column-gap: 0px
+    grid-row-gap: 5px
+
+    .titulo
+      position: relative
+      grid-area: 1 / 1 / 2 / 3
+      display: flex
+      justify-content: center
+      align-items: center
+
+    .fallo
+      position: relative
+      grid-area: 2 / 1 / 3 / 2
+      display: flex
+      justify-content: center
+      align-items: center
+      .badge
+        position: absolute
+        max-height: 100%
+        max-width: 100%
+        aspect-ratio: 1
+      .textoResta
+        font-size: 25vh
+        line-height: 1em
+        &:active
+          color: white
+
+    .reanimar
+      position: relative
+      grid-area: 2 / 2 / 3 / 3
+      display: flex
+      justify-content: center
+      align-items: center
+      .badge
+        position: absolute
+        max-height: 100%
+        max-width: 100%
+        aspect-ratio: 1
+      .textoSuma
+        font-size: 25vh
+        line-height: 1em
+        &:active
+          color: white
+
+    .contenedorAtributos
+      position: relative
+      grid-area: 3 / 1 / 4 / 3
+      display: flex
+      justify-content: space-around
+      align-items: center
+      .atributo
+        position: relative
+        width: 40%
+        height: 100%
+    .contenedorBotones
+      position: relative
+      grid-area: 4 / 1 / 5 / 3
       display: flex
       justify-content: space-around
       align-items: center
