--- a/src/app/comun/panel-control/panel-control.component.html
+++ b/src/app/comun/panel-control/panel-control.component.html
@@ -3,21 +3,48 @@
 <!--       Panel Control   -->
 <!--   ******************* -->
 
-<div *ngIf="habilitar" class="contenedorPanelControl">
+<div class="contenedorPanelControl">
+
+    <div class="frameAnimacionesFrame shaderFondo" [ngClass]="{'shaderFuego': turno}"></div>
 
 	<!-- Boton Central -->
-	<div class="contenedorBotonCentral" >
-		<img (click)="enviarComando('centro')" class="icono" src="assets/Iconos/Icono-Gema.png"/>
+	<div id="contenedorBotonCentral" >
+        <img class="fondoDiamante" src="assets/Iconos/fondo-badge.png"/>
+        <div class="frameAnimacionesFrame" [ngClass]="{'shaderFuego': turno}"></div>
+        <img class="marcoDiamante" src="assets/Iconos/marco-diamante.png"/>
+        <img class="diamante" [ngClass]="{'activo': turno || habilitar}" (click)="enviarComando('centro')" src="assets/Iconos/diamante.png"/>
+        <!--<img  class="icono" src="assets/Iconos/Icono-Gema.png"/>-->
 	</div>
 
 	<!-- Boton Lateral Derecho -->
 	<div class="contenedorBotonLateral derecho" (click)="enviarComando('derecha')">
-		<img class="icono" src="assets/Iconos/06.png"/>
+        <div class="frameAnimacionesFrame" [ngClass]="{'shaderFuego': turno}"></div>
+        <img class="icono" [ngClass]="{'activo': turno}" src="assets/Iconos/06.png"/>
 	</div>
 
 	<!-- Boton Lateral Izquierdo -->
 	<div class="contenedorBotonLateral izquierdo" (click)="enviarComando('izquierda')">
-		<img class="icono" src="assets/Iconos/09.png"/>
+        <div class="frameAnimacionesFrame" [ngClass]="{'shaderFuego': turno}"></div>
+		<img class="icono" [ngClass]="{'activo': turno}" src="assets/Iconos/09.png"/>
 	</div>
+ 
+	<!-- Indicador Vida -->
+	<div class="contenedorVida">
+		<img class="fondoIndicador" src="assets/ui/icons/fondo-vida.png"/>
+        <div class="valorIndicador Texto1">{{vida}}</div>
+	</div>
+
+	<!-- Indicador Energia -->
+	<div class="contenedorEnergia">
+		<img class="fondoIndicador" src="assets/ui/icons/fondo-energia.png"/>
+        <div class="valorIndicador Texto1">{{energia}}</div>
+	</div>
+
+	<!-- Indicador Energia Futura -->
+	<div class="contenedorEnergiaFutura">
+		<img class="fondoIndicador" src="assets/ui/icons/fondo-energia.png"/>
+        <div class="valorIndicador Texto2">{{energiaFutura}}</div>
+	</div>
+
 
 </div>
